# imitation_learning

./: README.md
bot_ws/: .ycm_extra_conf.py  frames.gv
bot_ws/devel/: .catkin  .rosinstall  setup.sh
bot_ws/devel/include/bot_gazebo/: ImageState.h  ImageStateRequest.h  ImageStateResponse.h
bot_ws/devel/include/jaco_vrep_msgs/: Torques.h
bot_ws/devel/include/rbt_baxter_interface/: GripperActionServerConfig.h  HeadActionServerConfig.h  PositionFFJointTrajectoryActionServerConfig.h  PositionJointTrajectoryActionServerConfig.h  VelocityJointTrajectoryActionServerConfig.h
bot_ws/devel/include/rbt_baxter_msgs/: AnalogIOState.h  AnalogIOStates.h  AnalogOutputCommand.h  AssemblyState.h  AssemblyStates.h  CameraControl.h  CameraSettings.h  CloseCamera.h  CloseCameraRequest.h  CloseCameraResponse.h  CollisionAvoidanceState.h  CollisionDetectionState.h  (+25 more)
bot_ws/plugins/hello_world/: CMakeLists.txt  hello.world
bot_ws/src/baxter_pkg/rbt_baxter_gazebo/: CMakeLists.txt  package.xml
bot_ws/src/baxter_pkg/rbt_baxter_gazebo/launch/: baxter_world.launch
bot_ws/src/baxter_pkg/rbt_baxter_gazebo/src/: rbt_baxter_gazebo_ros_control_plugin.cpp
bot_ws/src/baxter_pkg/rbt_baxter_hardware/: CMakeLists.txt  package.xml
bot_ws/src/baxter_pkg/rbt_baxter_hardware/config/: rbt_baxter_left_electric_gripper_controller.yaml  rbt_baxter_right_electric_gripper_controller.yaml  rbt_baxter_sim_controllers.yaml
bot_ws/src/baxter_pkg/rbt_baxter_hardware/include/rbt_baxter_hardware/: rbt_baxter_emulator.h
bot_ws/src/baxter_pkg/rbt_baxter_hardware/launch/: baxter_sdk_control.launch
bot_ws/src/baxter_pkg/rbt_baxter_hardware/src/: rbt_baxter_emulator.cpp
bullet/: setup.py
bullet/bullet/: bullet.py
bullet/bullet.egg-info/: PKG-INFO  SOURCES.txt
model/src/: cnn.py  gradient.py  irlgan.py  pose_network.py  prepocess_dataset.py  state_generation.py  tf_utils.py
model/src/networks/: visuonet.py
pybullet_ws/models/basket/: basket.mtl  basket.urdf
pybullet_ws/models/basket_green/: basket.urdf  basket_green.mtl
pybullet_ws/models/cube/: blue_cube.urdf  cube.blend  cube.blend1  cube.mtl  green_cube.urdf  red_cube.urdf
pybullet_ws/models/cube_table/: cube_table.blend  cube_table.blend1  cube_table.mtl  cube_table.urdf
pybullet_ws/models/cylinder/: cylinder.urdf
pybullet_ws/models/cylinder_green/: cylinder.urdf
pybullet_ws/models/sphere/: sphere2.urdf
pybullet_ws/models/sphere_green/: sphere2.urdf
pybullet_ws/src/: __init__.py  arrays.ipynb  geometry.py  interface.py  pblt.py  putting.py  putting_replay.py  read_img.py  rename.py  renderer.py  resize_img.py  stacking.py  stacking_one_block.py  stacking_with_subgoals.py  test.py  test2.py  test3.py  test4.py  test5.py  test6.py  test_step.py  video.py  vision.py
utils/: setup.py
utils/utils/: __init__.py  file.py  plot.py
vrep_ws/: __init__.py  data_collections.py  pathPlanningTest.py  pil_image.py  stacking.lua  stacking.py  torque_control.py  torque_control_ur5.py  torque_control_ur5_2.py  ur5.lua  ur5_torque_control.py
vrep_ws/parameters/: limits.txt  vision_sensor.txt
vrep_ws/scenes/: JacoCup.ttt  JacoStackingCamera.ttt  JacoStackingPython.ttt  JacoStackingPython2.ttt  JacoStackingPython3.ttt  JacoStackingPython4.ttt  JacoStackingPython5.ttt  JacoStackingVisionSensor.ttt  RMLExamples.ttt  UR5_pid.ttt  UR5_torque_control.ttt  UR5_torques2.ttt  basket.ttm.ttt  baxter_gripper.ttt  baxter_pkp.ttt  block_pick_place.ttt  block_pick_place2.ttt  block_pick_place_Z.ttt  console.ttt  jaco.ttt  jaco10.ttt  jaco11.ttt  jaco12.ttt  jaco14.ttt  jaco2.ttt  jaco20.ttt  jaco21.ttt  jaco22.ttt  jaco23.ttt  jaco24.ttt  jaco25.ttt  jaco26.ttt  jaco27.ttt  jaco28.ttt  jaco3.ttt  jaco3MotionPlannServer.ttt  jaco3MotionPlannServer2.ttt  jaco4.ttt  jaco5.ttt  jaco6.ttt  (+17 more)
vrep_ws/src/: interface.py  scene_object.py
vrep_ws/src/controllers/: controller.py  osc.py
vrep_ws/src/jaco/: base_config.py  config.py
(+470 files in other folders)
